<resources>
    <string name="app_name">A2</string>
    <string name="welcome_title">Yuanhao\'s Wear Sensor Monitor</string>
    <string name="open_sensors">Open Sensors</string>
    <string name="sensor_heading">Sensor Data</string>
    <string name="waiting_sensor">Waiting for sensor data</string>
    <string name="back">Back</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="unit_accel">m/s²</string>
    <string name="unit_gyro">rad/s</string>
    <string name="unit_mag">µT</string>
    <string name="status_active">Active</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="unit_bpm">bpm</string>
    <string name="status_measuring">Measuring...</string>
    <string name="status_permission_required">Permission Required</string>
    <string name="status_unsupported">Unsupported</string>
    <string name="tile_label">Heart Rate Tile</string>
    <string name="complication_label">Heart Rate Complication</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="status_error">Error</string>
    <string name="label_x">X: %s m/s²</string>
    <string name="label_y">Y: %s m/s²</string>
    <string name="label_z">Z: %s m/s²</string>
</resources>