...
                            onClick = onOpenSensors,
                            modifier = Modifier
                                .fillMaxWidth()
                                .wrapContentWidth(Alignment.CenterHorizontally)
                                .width(140.dp)
                                .transformedHeight(this, transformationSpec)
                                .testTag("OpenSensorsButton"),
                            transformation = SurfaceTransformation(transformationSpec),
                        ) {
                            Text(
                                text = stringResource(R.string.open_sensors),
                                textAlign = TextAlign.Center
                            )
...
