...
                contentPadding = ScreenScaffoldDefaults.contentPadding
            ) { scaffoldPadding ->
                TransformingLazyColumn(
                    contentPadding = scaffoldPadding,
                    state = listState,
                    modifier = Modifier
                        .testTag("SensorList")
                        .graphicsLayer { alpha = 0.99f }
                        .drawWithContent {
                            drawContent()
                            drawRect(
                                brush = Brush.verticalGradient(
                                    colors = listOf(Color.Transparent, Color.Black),
...
